# allegro_hand_ros_v4

./: LICENSE  README.md
allegro_hand/: CMakeLists.txt  package.xml
allegro_hand/launch/: _gazebo_standalone.launch  allegro_hand.launch  allegro_viz.launch  example_wave.launch
allegro_hand/script/: wave_example.py
allegro_hand/urdf/: allegro_hand_on_stand.urdf.xacro
allegro_hand_controllers/: CMakeLists.txt  package.xml
allegro_hand_controllers/config/: controllers.yaml  default_pos_controller.yaml  default_torque_controller.yaml
allegro_hand_controllers/launch/: allegro_hand.launch  allegro_hand_controllers.launch  allegro_viz.launch
allegro_hand_controllers/src/: allegro_node.cpp
allegro_hand_description/: allegro_hand_config.rviz  allegro_hand_description.srdf.xacro  allegro_hand_description.urdf.xacro  package.xml
allegro_hand_description/meshes/hand/: base_link_left_collision.stl  base_link_right_collision.stl  link_0_collision.stl  link_12_left.stl  link_12_left_collision.stl  link_12_right_collision.stl  link_13_collision.stl  link_14_collision.stl  link_15_collision.stl  link_15_tip_collision.stl  link_1_collision.stl  link_2_collision.stl  link_3_collision.stl  link_4_collision.stl
allegro_hand_description/meshes/support/: Allegro_deskstand.stl  Allegro_deskstand_bottom_collision.stl  Allegro_deskstand_top_collision.stl
allegro_hand_description/meshes/support_visuals/: UR5_attachment_bottom_collision.stl  UR5_attachment_top_collision.stl
allegro_hand_driver/: package.xml
allegro_hand_driver/include/allegro_hand_driver/: FilteredDerivative.h
allegro_hand_driver/scripts/: detect_pcan.py
allegro_hand_driver/src/: AllegroHandDrv.cpp
allegro_hand_driver/src/candrv/: pcan.cpp
allegro_hand_parameters/: initial_position.yaml  zero.yaml
allegro_hand_ros_v4/: CMakeLists.txt  package.xml
src/allegro_hand/: package.xml
src/allegro_hand/launch/: allegro_hand.launch  allegro_viz.launch
src/allegro_hand/src/: allegro_hand_joint_velsat.cpp  allegro_hand_node.cpp  allegro_hand_node.h
src/allegro_hand/urdf/: allegro_hand_on_stand.urdf.xacro
src/allegro_hand_controllers/: CMakeLists.txt  package.xml
src/allegro_hand_controllers/config/: controllers.yaml
src/allegro_hand_controllers/launch/: allegro_hand.launch  allegro_hand_controllers.launch
src/allegro_hand_controllers/src/: allegro_node.cpp  allegro_node.h  allegro_node_grasp.cpp  allegro_node_torque.cpp  allegro_node_torque.h  allegro_node_velsat.cpp
src/allegro_hand_description/: allegro_hand_description.srdf.xacro  allegro_hand_description.urdf.xacro  allegro_hand_description.xacro  allegro_hand_description_left.urdf  allegro_hand_description_left.xacro  allegro_hand_description_right.urdf  allegro_hand_description_right.xacro  build_desc.sh  package.xml
src/allegro_hand_description/meshes/: base_link_left.STL
src/allegro_hand_driver/: CMakeLists.txt
src/allegro_hand_driver/include/allegro_hand_driver/: AllegroHandDrv.h  FilteredDerivative.h
src/allegro_hand_driver/src/: AllegroHandDrv.cpp
src/allegro_hand_driver/src/candrv/: candrv.h  pcan.cpp
src/allegro_hand_keyboard/src/: allegro_hand_keyboard.cpp
src/bhand/: package.xml
