<?xml version="1.0"?>
<package>
    <name>allegro_hand_description</name>
    <version>0.0.0</version>
    <description>Allegro hand models.</description>

    <maintainer email="etienne.arlaud@inria.fr">EtienneAr</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <run_depend>gazebo_ros_control_select_joints</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
