<?xml version="1.0"?>
<package>
    <name>allegro_hand</name>
    <version>2.0.1</version>
    <description>The allegro_hand package</description>

    <maintainer email="seanyi@wonikrobotics.com">Sean Yi</maintainer>

    <license>BSD</license>

    <!-- dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>joint_state_publisher</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>allegro_hand_controllers</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
