<?xml version="1.0"?>
<package>
    <name>allegro_hand_controllers</name>
    <version>0.0.0</version>
    <description>The allegro_hand_controllers package</description>

    <maintainer email="etienne.arlaud@inria.fr">EtienneAr</maintainer>

    <license>BSD</license>

    <!-- dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>allegro_hand_driver</build_depend>
    <build_depend>libpcan</build_depend>
    <build_depend>hardware_interface</build_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>allegro_hand_driver</run_depend>
    <run_depend>libpcan</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>hardware_interface</run_depend>
    <run_depend>controller_manager</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
