<?xml version="1.0"?>
<package>
  <name>bhand</name>
  <version>0.0.0</version>
  <description>Computing grasp configurations.</description>

  <!-- Example:  -->
  <maintainer email="etienne.arlaud@inria.fr">EtienneAr</maintainer>
  <!-- NOTE: Author unknown. -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
